tests/snapshots/examples_fixtures/io__aoc_day11_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day11_part1.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `dfs_count`.

  --> examples/io/aoc_day11_part1.flx:79:13
   |
79 |     let r = dfs_count(nxt, graph, memo)
   |             ^^^^^^^^^

Hint:
  Define it first: let dfs_count = ...;
== stdout ==
<not executed>
